@@ -34,7 +34,8 @@ rule R_pipelineReport:
        pipeConfig=config["pipeline-config"],
        refGenome=config["reference"],
        refAnnot=config["refAnnot"],
-       samplesheet=config["samplesheet-file"]
+       samplesheet=config["samplesheet-file"],
+       sampleinfo=config["sampleInfo-file"]
     threads: cluster["R_pipelineReport"]["cpus-per-task"]
     resources:
         time=cluster["R_pipelineReport"]["time"],
@@ -46,6 +47,7 @@ rule R_pipelineReport:
              refAnnot.file <- '{params.refAnnot}'; \
              pipelineConfig <- '{params.pipeConfig}'; \
              samplesheet.file <- '{params.samplesheet}'; \
+             sampleinfo.file <- '{params.sampleinfo}'; \
              snakemake <- TRUE; \
              rmarkdown::render('{params.script}',output_file='{output}')" &> {log}
     """
