@@ -1,0 +1,3 @@
+sampleID	group
+Sample1_test_S12	1
+Sample2_test_S8	2
